--- a/views/blog/blog.html
+++ b/views/blog/blog.html
@@ -22,7 +22,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg">
 
-			<a class="navbar-brand" href="/index.html">Eduardo Longen Corrêa</a>
+			<a class="navbar-brand" href="../Elc/index.html">Eduardo Longen Corrêa</a>
 
   			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   			  <span class="navbar-toggler-icon"></span>
@@ -32,10 +32,10 @@
                 
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   	<li class="nav-item active">
-                    	<a class="nav-link" href="/views/portfolio/portfolio.html">Portfolio</a>
+                    	<a class="nav-link" href="../Elc/views/portfolio/portfolio.html">Portfolio</a>
                   	</li>
                   	<li class="nav-item active">
-                    	<a class="nav-link" href="/views/blog/blog.html">Blog</a>
+                    	<a class="nav-link" href="../Elc/views/blog/blog.html">Blog</a>
                   	</li>
                   	<li class="nav-item active">
                     	<a class="nav-link" href="https://github.com/EduLongen">Github</a>
@@ -73,14 +73,14 @@
 						<div class="row no-gutters">
 							<div class="col-md-6">
 								<div class="card-body">
-									<a class="blog-card-title" href="/views/blog/begginers_guide.html">A Beginner's Guide to Ruby on Rails</a>
+									<a class="blog-card-title" href="../Elc/views/blog/begginers_guide.html">A Beginner's Guide to Ruby on Rails</a>
 									<p class="blog-card-text">This post unlocks the secrets of Ruby on Rails, the framework that makes building killer apps a breeze. Learn what it is, how it works, and why it's your shortcut to coding stardom.</p>
 									<p class="blog-card-date">Jan 10, 2024</p>
 								</div>
 							</div>
 							<div class="col-md-6">
-								<a href="/views/blog/begginers_guide.html">
-									<img src="/assets/img/rails_train.jpeg" class="card-img" alt="rails_train">
+								<a href="../Elc/views/blog/begginers_guide.html">
+									<img src="../Elc/assets/img/rails_train.jpeg" class="card-img" alt="rails_train">
 								</a>
 							</div>
 						</div>
@@ -99,8 +99,8 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<a href="/views/blog/begginers_guide.html">
-									<img src="/assets/img/rails_train.jpeg" class="card-img" alt="rails_train">
+								<a href="../Elc/views/blog/begginers_guide.html">
+									<img src="../Elc/assets/img/rails_train.jpeg" class="card-img" alt="rails_train">
 								</a>
 							</div>
 						</div>
