--- a/views/blog/blog.html
+++ b/views/blog/blog.html
@@ -22,7 +22,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg">
 
-			<a class="navbar-brand" href="../Elc/index.html">Eduardo Longen Corrêa</a>
+			<a class="navbar-brand" href="Elc/index.html">Eduardo Longen Corrêa</a>
 
   			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   			  <span class="navbar-toggler-icon"></span>
